--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "npm": "1.1.x"
   },
   "dependencies": {
-    "grunt-cli": "0.1.6",
-    "grunt": "~0.4.0",
-    "grunt-yui-compressor": "0.2.1",
+    "grunt-cli": "0.1.9",
+    "grunt": "~0.4.1",
+    "grunt-yui-compressor": "0.3.0",
     "grunt-htmlcompressor": "~0.1.8",
-    "grunt-rsync": "~0.1.0"
+    "grunt-rsync": "~0.1.1",
+    "grunt-contrib-less": "~0.6.3"
   }
 }
