--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "url": "http://github.com/vagnervjs/grunt-boilerplate"
   },
   "engines": {
-    "node": "0.8.x",
-    "npm": "1.1.x"
+    "node": "0.10.x",
+    "npm": "1.3.x"
   },
   "dependencies": {
-    "grunt-cli": "0.1.9",
-    "grunt": "~0.4.1",
+    "grunt-cli": "0.1.x",
+    "grunt": "~0.4.x",
     "grunt-yui-compressor": "0.3.0",
     "grunt-htmlcompressor": "~0.1.8",
     "grunt-imageoptim": "~1.4.1",
